--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Simplex</title>
         <meta charset="utf-8">
+        <link rel="icon" href="images/favicon.png">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/media.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
@@ -242,8 +243,6 @@
         <footer>
             <div class="wrapper">
                 <p><span class="f-logo">simplex</span> &nbsp;&copy; 2017 | Privacy Policy</p>
-                <a href="https://github.com/Fotoz" target="_blank">github.com/Fotoz</a><br>
-                <img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Правильный CSS!">
             </div>
         </footer>
        <div id="toTop"><img src="images/toTop.png" alt="toTop"></div>
